[package]
name = "callisp"
version = "0.2.1"
edition = "2021"
license = "GPL-2.0"
keywords = ["lisp", "wasm", "language", "interpreter"]
categories = ["compilers"]
description = "A lisp interpreter that can be used with WASM."
repository = "https://github.com/Callum-Irving/callisp"
readme = "README.md"
homepage = "https://callumirving.pages.dev/projects/callisp/"

[[bin]]
name = "callisp"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
dyn-clone = "1.0.10"
lazy_static = "1.4.0"
wasm-bindgen = "0.2"
colored = "2.1.0"
